--- a/views/cadastrarcliente.ejs
+++ b/views/cadastrarcliente.ejs
@@ -1,6 +1,6 @@
 
 <!doctype html>
-<html lang="pt-BR">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -37,7 +37,7 @@
         <ul class="nav flex-column">
           <li class="nav-item">
             <a class="nav-link active" href="./usuario.html">
-                <i class="fa fa-user"> Usuario</i>
+                <i class="fa fa-user">   Usuario</i>
             </a>
           </li>
          
@@ -116,47 +116,45 @@
 
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4 fundo1">
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2 mt-3">Dashboard</h1>
+        <h1 class="h2 mt-3">Cadastrar Usuario</h1>
       </div>
 
       <div class="container">
         <div class="row">
+
             <div class="col-6">
-                <div class="card">
-                    <div class="card-header"><h4>Ultimas Vendas</h4></div>
+                <div class="card mt-0">
+                    <div class="card-header"><h4>Cadastrar Clientes</h4></div>
                     <div class="card-body">
-                        <p class="ml-4">Joao fulano</p>
-                        <p class="ml-4">Pedido nº : 09298575</p>
-                        <hr>
-                        <p class="ml-4">Joao fulano</p>
-                        <p class="ml-4">Pedido nº : 09298575</p>
-                        <hr>
-                        <p class="ml-4">Joao fulano</p>
-                        <p class="ml-4">Pedido nº : 09298575</p>
-                        <hr>
-                        <button class="btn btn-success">Ver Mais</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6">
-                <div class="card">
-                    <div class="card-header"><h4>Ultimos produtos Cadastrados</h4></div>
-                    <div class="card-body">
-                        <p class="ml-4">Lixadeira</p>
-                        <p class="ml-4">Marca: Makita</p>
-                        <hr>
-                        <p class="ml-4">Lixadeira</p>
-                        <p class="ml-4">Marca: Makita</p>
-                        <hr>
-                        <p class="ml-4">Lixadeira</p>
-                        <p class="ml-4">Marca: Makita</p>
-                        <hr>
-                        <button class="btn btn-success">Ver Mais</button>
+                        <form action="/cadastroUser" method="POST">
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Nome</label>
+                                <input type="text" class="form-control" name="nome" aria-describedby="emailHelp" placeholder="Digite Seu nome">
+                                
+                              </div>
+                              <div class="form-group">
+                                <label for="exampleInputPassword1">Senha</label>
+                                <input type="password" class="form-control" name="senha" placeholder="Escolha uma senha">
+                              </div>
+                              
+                              <div class="form-group">
+                                <label for="exampleFormControlSelect1">Perfil</label>
+                                <select class="form-control" id="exampleFormControlSelect1" name="perfil">
+                                  <option>Administrativo</option>
+                                  <option>Loja</option>
+                                </select>
+                              </div>
+
+
+                              <button type="submit" class="btn btn-primary mt-2">Salvar</button>
+                        </form>
                     </div>
                 </div>
             </div>
 
-
+                    </div>
+                </div>
+            </div>
             </div>
         </div>
 
